--- a/apps/docs/content/components/CTAForm/index.mdx
+++ b/apps/docs/content/components/CTAForm/index.mdx
@@ -82,7 +82,7 @@ It is crucial to provide a clear description of the checkbox's purpose and hyper
   <Do>
     <img src="https://github.com/primer/brand/assets/131988618/f960b448-99e1-4703-a4a7-ea1441f6c72a" />
     <Caption>
-        Short concise text for the checkbox. Hyperlink to relevant resources and checkboxes must be required to proceed with the CTA.
+        Use short and concise text for the checkbox and inline links to relevant resources.
     </Caption>
   </Do>
   <Dont>
