--- a/apps/docs/content/components/CTAForm/index.mdx
+++ b/apps/docs/content/components/CTAForm/index.mdx
@@ -88,7 +88,7 @@ It is crucial to provide a clear description of the checkbox's purpose and hyper
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/52e87926-c18c-4748-851e-41fd1e86f5d8" />
     <Caption>
-        Don't use lengthy text without links. 
+        Don't use lengthy text or unstlyed links.
     </Caption>
   </Dont>
 </DoDontContainer>
