--- a/apps/docs/content/components/CTAForm/index.mdx
+++ b/apps/docs/content/components/CTAForm/index.mdx
@@ -23,6 +23,8 @@ The CTA form presents a concise label, prompting users to provide specific input
 
 By adopting the same guidelines as the respective [form](/components/TextInput) component, [button](/components/Button) component, and [checkbox](/components/Checkbox) component, the CTA form ensures consistency in design and enhances user familiarity with the interface.
 
+We recommend the CTA form over the [CTA banner](/components/CTABanner) when the main action for a user to take is to submit a form (e.g subscribe to a newsletter) vs taking actions (sign in or bring the use to a pricing page).
+
 <DoDontContainer>
   <Do>
 <img src="https://github.com/primer/brand/assets/131988618/561b62c9-c328-4c7e-98e5-18e5a5d7ad42" />
@@ -31,7 +33,7 @@ By adopting the same guidelines as the respective [form](/components/TextInput) 
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/0cb06dc0-b885-4b4d-a997-cd42da72f798" />
     <Caption>
-      Don't place the CTA Form early on in the user journey. Use the Hero or CTA Banner component instead.
+      Don't place the CTA Form early on in the user journey. Use the Hero instead for early on.
     </Caption>
   </Dont>
 </DoDontContainer>
