--- a/apps/docs/content/components/Stack/index.mdx
+++ b/apps/docs/content/components/Stack/index.mdx
@@ -3,14 +3,15 @@ title: Stack
 description: Use the stack component to enable layout of its immediate children along the vertical or horizontal axis.
 ---
 
+import CustomVideoPlayer from '../../../src/components/custom-video-player'
 import ComponentLayout from '../../../src/layouts/component-layout'
 export default ComponentLayout
 
-![]()
+![](https://github.com/primer/brand/assets/912236/f04a87ce-a4ca-403b-8732-a8575a39437a)
 
 ## Usage
 
-Use the stack component to offer space distribution and alignment between items in a vertical or horizontal direction (one-dimensional layout)[^1]. If you need vertical and horizontal layout (two-dimensional layout), use the [grid](/components/Grid) component instead. We recommend reding the [grid vs stack documentation](/components/Grid#grid-vs-stack) documentation.
+Use the stack component to offer space distribution and alignment between items in a vertical or horizontal direction (one-dimensional layout)[^1]. If you need vertical and horizontal layout (two-dimensional layout), use the [grid](/components/Grid) component instead. When in doubt, we recommend reding the [grid vs stack](/components/Grid#grid-vs-stack) documentation.
 
 We recommend using the stack component for inline or text based elements. The stack allows scaling, wraping and shrinking features depending on each item content. For example, a navigational list or a button group.
 
@@ -18,12 +19,24 @@ We recommend using the stack component for inline or text based elements. The st
 
 <DoDontContainer>
   <Do>
-    <img src="" alt="" />
-    <Caption></Caption>
+    <img
+      src="https://github.com/primer/brand/assets/912236/3cfb1fc3-071c-478e-8104-543dcc823927"
+      alt=""
+    />
+    <Caption>
+      Use the stack component for inline or text based elements. Like a
+      navigational list or a button group.
+    </Caption>
   </Do>
   <Dont>
-    <img src="" alt="" />
-    <Caption></Caption>
+    <img
+      src="https://github.com/primer/brand/assets/912236/53436826-515f-49d6-b33c-d84124f29aa4"
+      alt=""
+    />
+    <Caption>
+      Don't use the stack component to create a grid of items. Use the grid
+      component instead.
+    </Caption>
   </Dont>
 </DoDontContainer>
 
@@ -32,6 +45,43 @@ We recommend using the stack component for inline or text based elements. The st
 ### Gap
 
 Use the gap to change the space between items. Use small values when grouping closed related items, and larger values to separate sections or non-related items between them.
+
+<DoDontContainer>
+  <Do>
+    <img
+      src="https://github.com/primer/brand/assets/912236/dd508033-0435-48af-9b0b-ab1881608d8e"
+      alt=""
+    />
+    <Caption>
+      Use large gap values to separate sections or non-related items.
+    </Caption>
+  </Do>
+  <Dont>
+    <img
+      src="https://github.com/primer/brand/assets/912236/3e6974eb-2f80-4fee-9000-dc9fa31432a7"
+      alt=""
+    />
+    <Caption>Don't use large gap values for related items.</Caption>
+  </Dont>
+</DoDontContainer>
+
+### Direction, alignment and justification
+
+Use the direction to control the rendering direction of items. The direction can be adjusted on different viewports, for example, you can render items horizontally on large viewports, but vertically on small viewports for better readability and composition. For example, an icon and a label might be rendered horizontally on large viewports, but vertically on small viewports.
+
+Use the align and justify options for determining the rendering alignment on the cross-axis and main-axis respectively. Taking the example above, the icon and label might be aligned to the center on mobile viewports, but aligned to the start on large viewports.
+
+<div>
+  <CustomVideoPlayer
+    width="100%"
+    src="https://github.com/primer/brand/assets/912236/cd8eb55f-0f7e-40fd-bfdb-47ab8507370f"
+  />
+  <Caption>
+    Use vertical layout on small viewports to ensure that the content is
+    readable. Combine it with center alignment if the text is short and the
+    context calls for it.
+  </Caption>
+</div>
 
 ## Related components
 
