--- a/apps/docs/content/components/Grid/index.mdx
+++ b/apps/docs/content/components/Grid/index.mdx
@@ -166,7 +166,7 @@ We recommend using the grid or the [stack](/components/Stack) component dependin
   <Box as="figcaption" mt="1">
     <h4 style={{marginBottom: 0}}>Card or pillar grids</h4>
     <Text as="p" mt="0">
-      For laying out a card, pillars or similar content-based element grid.
+      When laying out cards, pillars, or similar content-based elements.
     </Text>
   </Box>
   <img
