--- a/apps/docs/content/components/Stack/index.mdx
+++ b/apps/docs/content/components/Stack/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Stack
-description: Use the stack component to enable layout of its immediate children along the vertical or horizontal axis.
+description: Use the Stack component to create a layout for its immediate children along the vertical or horizontal axis.
 ---
 
 import CustomVideoPlayer from '../../../src/components/custom-video-player'
