--- a/apps/docs/content/components/Stack/index.mdx
+++ b/apps/docs/content/components/Stack/index.mdx
@@ -11,7 +11,7 @@ export default ComponentLayout
 
 ## Usage
 
-Use the stack component to offer space distribution and alignment between items in a vertical or horizontal direction (one-dimensional layout)[^1]. If you need vertical and horizontal layout (two-dimensional layout), use the [grid](/components/Grid) component instead. When in doubt, we recommend reding the [grid vs stack](/components/Grid#grid-vs-stack) documentation.
+Use the stack component to distribute space and alignment between items in a vertical or horizontal direction (one-dimensional layout)[^1]. If you need both vertical and horizontal layout (two-dimensional layout), use the [grid](/components/Grid) component instead. When in doubt, we recommend reding the [grid vs stack](/components/Grid#grid-vs-stack) documentation.
 
 We recommend using the stack component for inline or text based elements. The stack allows scaling, wraping and shrinking features depending on each item content. For example, a navigational list or a button group.
 
