--- a/apps/docs/content/components/Stack/index.mdx
+++ b/apps/docs/content/components/Stack/index.mdx
@@ -13,7 +13,7 @@ export default ComponentLayout
 
 Use the stack component to distribute space and alignment between items in a vertical or horizontal direction (one-dimensional layout)[^1]. If you need both vertical and horizontal layout (two-dimensional layout), use the [grid](/components/Grid) component instead. When in doubt, we recommend reading the [grid vs stack](/components/Grid#grid-vs-stack) documentation.
 
-We recommend using the stack component for inline or text based elements. The stack allows scaling, wraping and shrinking features depending on each item content. For example, a navigational list or a button group.
+We recommend using the stack component for inline or text based elements. Stack enables items to scale, wrap, and shrink depending on each item's content and the available space.
 
 [^1]: The stack component is implemented using the [CSS Flexbox Layout](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout) specification.
 
