--- a/apps/docs/content/components/Stack/index.mdx
+++ b/apps/docs/content/components/Stack/index.mdx
@@ -65,7 +65,7 @@ Use the gap to change the space between items. Use small values when grouping cl
   </Dont>
 </DoDontContainer>
 
-### Direction, alignment and justification
+### Direction, alignment, and justification
 
 Use the direction to control the rendering direction of items. The direction can be adjusted on different viewports, for example, you can render items horizontally on large viewports, but vertically on small viewports for better readability and composition. For example, an icon and a label might be rendered horizontally on large viewports, but vertically on small viewports.
 
