--- a/apps/docs/content/components/Stack/index.mdx
+++ b/apps/docs/content/components/Stack/index.mdx
@@ -67,7 +67,7 @@ Use the gap to change the space between items. Use small values when grouping cl
 
 ### Direction, alignment, and justification
 
-Use the direction to control the rendering direction of items. The direction can be adjusted on different viewports, for example, you can render items horizontally on large viewports, but vertically on small viewports for better readability and composition. For example, an icon and a label might be rendered horizontally on large viewports, but vertically on small viewports.
+Use the direction to control the rendering direction of items. The direction can be adjusted on different viewports. For example, an icon and a label might be rendered horizontally on large viewports, but vertically on small viewports for better readability and composition.
 
 Use the align and justify options for determining the rendering alignment on the cross-axis and main-axis respectively. Taking the example above, the icon and label might be aligned to the center on mobile viewports, but aligned to the start on large viewports.
 
