--- a/apps/docs/content/components/Grid/index.mdx
+++ b/apps/docs/content/components/Grid/index.mdx
@@ -44,7 +44,28 @@ In most cases, we recommend using the same column span for each element to creat
 
 In some cases, you may need specific amount of columns or rows instead of an even distribution. Use different column spans when creating a visual hierarchy between items or when defining a page or section layout structures. E.g. A section with an [image](/components/Image) and [text](/components/text), a form with inputs and text areas, or a layout with main content and a sidebar.
 
-![](https://github.com/primer/brand/assets/912236/bc442c41-3546-4341-bab3-1c649ccfe7d2)
+<DoDontContainer stacked>
+  <Do>
+    <img
+      src="https://github.com/primer/brand/assets/912236/bc442c41-3546-4341-bab3-1c649ccfe7d2"
+      alt=""
+    />
+    <Caption>
+      Use different column spans to create a visual hierarchy between a large
+      image and text.
+    </Caption>
+  </Do>
+  <Dont>
+    <img
+      src="https://github.com/primer/brand/assets/912236/f6307bee-3236-435a-a74d-b6d942a7925b"
+      alt=""
+    />
+    <Caption>
+      Don't span in few columns large images or long content text that will
+      create unbalanced layouts.
+    </Caption>
+  </Dont>
+</DoDontContainer>
 
 <DoDontContainer stacked>
   <Do>
@@ -53,8 +74,9 @@ In some cases, you may need specific amount of columns or rows instead of an eve
       alt=""
     />
     <Caption>
-      Use different column spans when you want to create a visual hierarchy
-      between different elements.
+      Use different column spans when you want to create a visual hierarchy on a
+      section between different elements. Like a footer with notes and
+      navigational lists.
     </Caption>
   </Do>
   <Dont>
