--- a/apps/docs/content/components/Grid/index.mdx
+++ b/apps/docs/content/components/Grid/index.mdx
@@ -123,7 +123,8 @@ When using even column spans, we recommend to span each item full width on small
 
 ## Grid vs Stack
 
-We recommend using the grid or the [stack](/components/Stack) component depending on how the child items are displayed and how are they expected to work on various screen sizes. If the element has all of its child items displayed inline, then most probably the [stack](/components/Stack) component would be the best option. However, if you think of columns and rows, then the use the grid component[^2].
+We recommend using either the grid or [stack](/components/Stack) component, depending on how the child items are displayed and how they should work on different screen sizes. If the element has all of its child items displayed inline, the stack component is probably the best option. Otherwise, if you're thinking of columns and rows, use the grid component.
+[^2].
 
 ### Grid examples
 
