--- a/apps/docs/content/components/Grid/index.mdx
+++ b/apps/docs/content/components/Grid/index.mdx
@@ -123,8 +123,7 @@ When using even column spans, we recommend to span each item full width on small
 
 ## Grid vs Stack
 
-We recommend using either the grid or [stack](/components/Stack) component, depending on how the child items are displayed and how they should work on different screen sizes. If the element has all of its child items displayed inline, the stack component is probably the best option. Otherwise, if you're thinking of columns and rows, use the grid component.
-[^2].
+We recommend using either the grid or stack component, depending on how the child items are displayed and how they work on different screen sizes. If the element is a sequential list of items in a vertical or horizontal order, we recommend using the stack component. Otherwise, if the element needs columns and rows or for general page layout, we recommend using the grid component instead[^2].
 
 ### Grid examples
 
