--- a/apps/docs/content/components/Grid/index.mdx
+++ b/apps/docs/content/components/Grid/index.mdx
@@ -14,7 +14,7 @@ export default ComponentLayout
 
 Use the grid component to define a layout that maintains consistent element positioning and sizing across pages. The grid is based on a 12-column layout and uses vertical and horizontal gaps to separate content units consistently[^1].
 
-Use the grid for elements with related content or similar purposes. E.g. A list of [cards](/components/Card) or a "contact us" form.
+Use the grid for general page layout, and grouping related elements with a similar purpose. E.g. A list of [cards](/components/Card) or a "contact us" form.
 
 In most cases, we recommend using the same column span for each element to create a consistent layout.
 
