--- a/apps/docs/content/components/Grid/index.mdx
+++ b/apps/docs/content/components/Grid/index.mdx
@@ -14,7 +14,7 @@ export default ComponentLayout
 
 Use the grid component to define a layout that maintains consistent element positioning and sizing across pages. The grid is based on a 12-column layout and uses vertical and horizontal gaps to separate content units consistently[^1].
 
-Use the grid for general page layout, and grouping related elements with a similar purpose. E.g. A list of [cards](/components/Card) or a "contact us" form.
+Use the grid for general page layout, and grouping related elements with a similar purpose. E.g. A "contact us" form or a list of [cards](/components/Card).
 
 In most cases, we recommend using the same column span for each element to create a consistent layout.
 
@@ -42,7 +42,7 @@ In most cases, we recommend using the same column span for each element to creat
   </Dont>
 </DoDontContainer>
 
-In some cases, you may need specific amount of columns or rows instead of an even distribution. Use different column spans when creating a visual hierarchy between items or when defining a page or section layout structures. E.g. A section with an [image](/components/Image) and [text](/components/text), a form with inputs and text areas, or a layout with main content and a sidebar.
+Use different column spans instead of an even distribution when creating a visual hierarchy between items or when defining a general page or a section layout. E.g. A section with an [image](/components/Image) and [text](/components/text), a layout with main content and a sidebar or a form with inputs and text areas.
 
 <DoDontContainer stacked>
   <Do>
