--- a/apps/docs/content/components/River/index.mdx
+++ b/apps/docs/content/components/River/index.mdx
@@ -29,28 +29,28 @@ River content should be short and concise, no longer than 3 or 4 sentences and i
 
 Two or more rivers can be stacked to walk the user through a set of feautres. When stacking rivers, consider alternating between left and right alignments to create a more dynamic reading flow. When alternating alignements, use a `40:60` image to text ratio, when not, keep the ratio to `50:50`.
 
-Note that too many rivers can make the design feel repetitive, in that situation, consider introducing a breakout section or break the content with a different component, such as [Pillar](/components/Pillar) or [Card](/components/Card) to provide a better visual hierarchy. For example, use the river for the top features you want to highlight and then use Pillars to showcase the rest of the features.
+Note that too many rivers can make the design feel repetitive, in that situation, consider introducing a breakout section or break the content with a different component, such as [pillar](/components/Pillar) or [card](/components/Card) to provide a better visual hierarchy and experience. For example, use the river for the top features you want to highlight and then use pillars to showcase the rest of the features.
 
 ### Sections with rivers
+
+The river component is a leaf section and it should not include any child sections within in.
+
+Multiple rivers can be used to conform a section. In that case, the section should include a [section intro](/components/SectionIntro) that introduces the main topic or features.
 
 - @TODO A River is a leaf section, it should not include any child sections.
 - @TODO Multiple Rivers conform a section. (but require a sectionintro)
 
 ## Anatomy
 
-### Heading
+### Content
 
-The heading is the main title of the river. It should be short and concise.
-
-### Body
-
-The body text is the main content of the river. Use it to describe the feature or topic in a short paragraph.
+River provides a heading as the main title and a body text as the main content that describes the adjacent visual. The heading should be short and concise and the body should describe the feature or topic in a short paragraph.
 
 ### Link
 
 River can include an optional call to action. Use it to link to more detailed content about the feature or topic.
 
-### Media
+### Visual
 
 A river can include either an image or video to illustrate the feature or topic. The media should be relevant to the content and should not be used as a decorative element.
 
