--- a/apps/docs/content/components/River/react.mdx
+++ b/apps/docs/content/components/River/react.mdx
@@ -4,7 +4,7 @@ status: Experimental
 figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=418%3A8416
 source: https://github.com/primer/brand/blob/main/packages/react/src/River/River.tsx
 storybook: '/brand/storybook/?path=/story/components-river--default'
-description: UUse the river component to introduce a feature using a type and media pairing.
+description: Use the river component to introduce a feature using a type and media pairing.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
@@ -100,7 +100,7 @@ import {River} from '@primer/react-brand'
       </Text>
     </River.Content>
   </River>
-  {/* 60/40 example */};
+  {/* 60/40 example */}
   <River imageTextRatio="60:40">
     <River.Visual>
       <img
