--- a/apps/docs/content/components/River/index.mdx
+++ b/apps/docs/content/components/River/index.mdx
@@ -16,11 +16,17 @@ River content should be short and concise, no longer than 3 or 4 sentences and i
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/175638/8b3057f9-00c5-4bf5-af44-00b0129c6c6e" />
+    <img
+      alt=""
+      src="https://github.com/primer/brand/assets/175638/8b3057f9-00c5-4bf5-af44-00b0129c6c6e"
+    />
     <Caption>Write short and concise text content.</Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/175638/ea902be3-2032-49de-bdb4-23be0c0f090d" />
+    <img
+      alt=""
+      src="https://github.com/primer/brand/assets/175638/ea902be3-2032-49de-bdb4-23be0c0f090d"
+    />
     <Caption>Don't overload the river with too much content.</Caption>
   </Dont>
 </DoDontContainer>
@@ -29,26 +35,81 @@ River content should be short and concise, no longer than 3 or 4 sentences and i
 
 Two or more rivers can be stacked to walk the user through a set of feautres. When stacking rivers, consider alternating between left and right alignments to create a more dynamic reading flow. When alternating alignements, use a `40:60` image to text ratio, when not, keep the ratio to `50:50`.
 
+<DoDontContainer>
+  <Do>
+    <img
+      alt=""
+      src="https://github.com/primer/brand/assets/912236/2b763c62-4d56-4d60-9cae-f663407e0506"
+    />
+    <Caption>Alternate rivers with left and right alignments.</Caption>
+  </Do>
+  <Dont>
+    <img
+      alt=""
+      src="https://github.com/primer/brand/assets/912236/6c7b42a7-0048-4539-99f3-a1c3beb8ee70"
+    />
+    <Caption>
+      Don't stack numerous rivers with 40:60 ratio without alternating left and
+      right alignments.
+    </Caption>
+  </Dont>
+</DoDontContainer>
+
 Note that too many rivers can make the design feel repetitive, in that situation, consider introducing a breakout section or break the content with a different component, such as [pillar](/components/Pillar) or [card](/components/Card) to provide a better visual hierarchy and experience. For example, use the river for the top features you want to highlight and then use pillars to showcase the rest of the features.
+
+<DoDontContainer>
+  <Do>
+    <img
+      alt=""
+      src="https://github.com/primer/brand/assets/912236/c847e394-3062-4b2a-83d5-77142aafed67"
+    />
+    <Caption>
+      Use pillars or cards to breakout a multiple river section and provide a
+      better visual hierarchy.
+    </Caption>
+  </Do>
+  <Dont>
+    <img
+      alt=""
+      src="https://github.com/primer/brand/assets/912236/8eb9d19c-8869-4efd-8f72-ea003e5516c4"
+    />
+    <Caption>
+      Don't stack numerous rivers without breaking the content to avoid
+      repetitive a layout that can make the design feel repetitive.
+    </Caption>
+  </Dont>
+</DoDontContainer>
 
 ### Sections with rivers
 
-The river component is a leaf section and it should not include any child sections within in.
+A single river component acts as a section and it should not include any child sections within in. Multiple rivers can be used to conform a section. In that case, the section should include a [section intro](/components/SectionIntro) that introduces the main topic or features.
 
-Multiple rivers can be used to conform a section. In that case, the section should include a [section intro](/components/SectionIntro) that introduces the main topic or features.
-
-- @TODO A River is a leaf section, it should not include any child sections.
-- @TODO Multiple Rivers conform a section. (but require a sectionintro)
+<DoDontContainer>
+  <Do>
+    <img
+      alt=""
+      src="https://github.com/primer/brand/assets/912236/b4339bb2-419b-4ffc-98ff-23f76d190496"
+    />
+    <Caption>Use a section intro to introduce multiple rivers.</Caption>
+  </Do>
+  <Dont>
+    <img
+      alt=""
+      src="https://github.com/primer/brand/assets/912236/8b503c41-5715-4757-a3cd-23614308b0ab"
+    />
+    <Caption>
+      Don't add child sections or other components to the river body content.
+    </Caption>
+  </Dont>
+</DoDontContainer>
 
 ## Anatomy
+
+![A river component used to showcase a security feature. The title reads "Get security feedback with every git push" and it includes an image showing screenshots of of a CLI prompt with the git push command and a code scanning screenshot.](https://github.com/primer/brand/assets/912236/859bef31-aff0-4f75-83b1-e1dc22305f9d)
 
 ### Content
 
 River provides a heading as the main title and a body text as the main content that describes the adjacent visual. The heading should be short and concise and the body should describe the feature or topic in a short paragraph.
-
-### Link
-
-River can include an optional call to action. Use it to link to more detailed content about the feature or topic.
 
 ### Visual
 
@@ -57,6 +118,10 @@ A river can include either an image or video to illustrate the feature or topic.
 Always use high quality images and videos. Avoid using images with text or single logos. Ensure the image fills the provided container.
 
 The image is automatically styled to fit the width of the parent container. If you have bespoke styling requirements, you can disable the provided default styles and style the image manually.
+
+### Link
+
+River can include an optional call to action to link to more detailed content about the feature or topic.
 
 ## Related components
 
