--- a/apps/docs/content/components/CTAForm/index.mdx
+++ b/apps/docs/content/components/CTAForm/index.mdx
@@ -59,7 +59,7 @@ Keep the CTA Form simple and intuitive to minimize friction and encourage user e
 
 ### Size
 
-The CTA Form includes a medium and a small size option. Choose the sizing of the CTA Form to best ensure consistency in design and enhance user familiarity with the interface.
+The CTA Form includes a medium and a small size option. Choose the sizing of the CTA form to best ensure consistency in design and enhance user familiarity with the interface.
 
 <DoDontContainer>
   <Do>
