--- a/apps/docs/content/components/CTAForm/index.mdx
+++ b/apps/docs/content/components/CTAForm/index.mdx
@@ -70,7 +70,7 @@ The CTA Form includes a medium and a small size option. Choose the sizing of the
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/5ea3a93b-2978-4c50-b982-76c85ae57a01" />
-    <Caption>Don't over extend or compress the CTA Form when possible.</Caption>
+    <Caption>Don't over extend or compress the CTA form when possible.</Caption>
   </Dont>
 </DoDontContainer>
 
