--- a/apps/docs/content/components/CTAForm/index.mdx
+++ b/apps/docs/content/components/CTAForm/index.mdx
@@ -28,7 +28,7 @@ We recommend the CTA form over the [CTA banner](/components/CTABanner) when the 
 <DoDontContainer>
   <Do>
 <img src="https://github.com/primer/brand/assets/131988618/561b62c9-c328-4c7e-98e5-18e5a5d7ad42" />
-    <Caption>Place the CTA Form near the end of the page to conclude the user journey and encourage users to take action.</Caption>
+    <Caption>Place the CTA form near the end of the page to conclude the user journey and encourage users to take action.</Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/0cb06dc0-b885-4b4d-a997-cd42da72f798" />
