--- a/apps/docs/content/components/CTAForm/index.mdx
+++ b/apps/docs/content/components/CTAForm/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: CTA form
-description: Use CTA Form to capture user input and call to action button.
+description: Use CTA form to capture user input and call to action button.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
