--- a/apps/docs/content/components/CTAForm/index.mdx
+++ b/apps/docs/content/components/CTAForm/index.mdx
@@ -98,6 +98,6 @@ It is crucial to provide a clear description of the checkbox's purpose and hyper
 ## Related components
 
 - [Button](/components/Button): To display a button that preforms an action.
-- [Form](/components/TextInput): To create an input form for single-line text field.
+- [Text input](/components/TextInput): To create an input form for single-line text field.
 - [Checkbox](/components/Checkbox): To select options or acknowledge information. 
 - [CTA Banner](/components/CTABanner): To draw attention to or create urgency around a user action.
