--- a/apps/docs/content/components/CTAForm/index.mdx
+++ b/apps/docs/content/components/CTAForm/index.mdx
@@ -11,7 +11,7 @@ export default ComponentLayout
 ![An image displaying a the CTA form anatomy, with a label on top of an input form, followed by a CTA button and optional checkbox underneath the input.](https://github.com/primer/brand/assets/131988618/2c86dd18-f3b0-41e3-a0d3-cca004ea37b1)
 
 - Label: Short text that describes the required input form. 
-- Input: Form requesting information. 
+- Text input: Single-line text field
 - Action: Call-to-action button that corresponds after completing the input form. 
 - Checkbox: An optional checkbox to request additional behavior.
 
