--- a/apps/docs/content/components/CTAForm/index.mdx
+++ b/apps/docs/content/components/CTAForm/index.mdx
@@ -55,11 +55,9 @@ Keep the CTA Form simple and intuitive to minimize friction and encourage user e
   </Dont>
 </DoDontContainer>
 
-## Options
+### Component length (width)
 
-### Size
-
-The CTA Form includes a medium and a small size option. Choose the sizing of the CTA form to best ensure consistency in design and enhance user familiarity with the interface.
+When implementing CTA form, it's important to consider the length of the input field in order to maintain consistency and enhance user familiarity with the interface. Keeping the string length (width) of the component relative to the expected input is a recommended practice. Pair the component with additional information or context instead of spanning in wide viewports.
 
 <DoDontContainer>
   <Do>
@@ -73,6 +71,8 @@ The CTA Form includes a medium and a small size option. Choose the sizing of the
     <Caption>Don't over extend or compress the CTA form when possible.</Caption>
   </Dont>
 </DoDontContainer>
+
+## Options
 
 ### Checkbox
 
