--- a/apps/docs/content/components/CTAForm/index.mdx
+++ b/apps/docs/content/components/CTAForm/index.mdx
@@ -38,6 +38,8 @@ We recommend the CTA form over the [CTA banner](/components/CTABanner) when the 
   </Dont>
 </DoDontContainer>
 
+### Setting Context
+
 Keep the CTA Form simple and intuitive to minimize friction and encourage user engagement. Ensure there is enough context surrounding the component. Utilize the label as a description of the form input. 
 
 <DoDontContainer>
@@ -55,7 +57,7 @@ Keep the CTA Form simple and intuitive to minimize friction and encourage user e
   </Dont>
 </DoDontContainer>
 
-### Component length (width)
+### Component length
 
 When implementing CTA form, it's important to consider the length of the input field in order to maintain consistency and enhance user familiarity with the interface. Keeping the string length (width) of the component relative to the expected input is a recommended practice. Pair the component with additional information or context instead of spanning in wide viewports.
 
