add align prop to Text component

--- a/apps/docs/content/components/Text/index.mdx
+++ b/apps/docs/content/components/Text/index.mdx
@@ -44,8 +44,8 @@ The text size ranges from 100 to 700, with 400 as the default size. This scale i
     <img src="https://github.com/primer/brand/assets/912236/e029b053-eab8-47a7-bd49-b6ce49ac8bdf" />
     <Caption>
       Use a smaller size to provide visual hierarchy when the text is paired
-      with a title. Use as many text components as needed to represent different blocks of
-      content.
+      with a title. Use as many text components as needed to represent different
+      blocks of content.
     </Caption>
   </Do>
   <Dont>
@@ -56,6 +56,12 @@ The text size ranges from 100 to 700, with 400 as the default size. This scale i
     </Caption>
   </Dont>
 </DoDontContainer>
+
+### Alignment
+
+Text alignment options offer a convenient way to control the positioning of content within block level elements.
+
+Available options include `start`, `center`, and `end`, which are recommended for supporting bidirectional reading. In situations where fixed alignment is needed irresepctive of reading direction, you can also utilize the `left` and `right` options.
 
 ### Weight
 
