--- a/apps/docs/content/components/Checkbox/react.mdx
+++ b/apps/docs/content/components/Checkbox/react.mdx
@@ -11,6 +11,8 @@ import InlineCode from '@primer/gatsby-theme-doctocat/src/components/inline-code
 import {PropTableValues} from '../../src/components'
 import {Label} from '@primer/react'
 import {Link} from 'gatsby'
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
 
 ## Examples
 
